chore: add environment variable for pageStructure storage

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-AWS_REGION=ap-northeast-1
-AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
-DYNAMO_TABLE_NAME=comment
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+DYNAMO_TABLE_NAME_COMMENT=
+DYNAMO_TABLE_NAME_PAGESTRUCTURE=
