--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 DYNAMO_TABLE_NAME_COMMENT=
 DYNAMO_TABLE_NAME_PAGESTRUCTURE=
+DYNAMO_TABLE_NAME_RECENTGLOBALCOMMENT=
