--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ AWS_SECRET_ACCESS_KEY=
 DYNAMO_TABLE_NAME_COMMENT=
 DYNAMO_TABLE_NAME_PAGESTRUCTURE=
 DYNAMO_TABLE_NAME_RECENTGLOBALCOMMENT=
+DYNAMO_TABLE_NAME_RECENTDOMAINCOMMENT=
