feat: add pageGlobalStructure  dynamodb table

--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 DYNAMO_TABLE_NAME_COMMENT=
 DYNAMO_TABLE_NAME_PAGESTRUCTURE=
+DYNAMO_TABLE_NAME_PAGEGLOBALSTRUCTURE=
 DYNAMO_TABLE_NAME_RECENTGLOBALCOMMENT=
 DYNAMO_TABLE_NAME_RECENTDOMAINCOMMENT=
