feat: add CommentLog dynamodb table

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DYNAMO_TABLE_NAME_PAGESTRUCTURE=
 DYNAMO_TABLE_NAME_PAGEGLOBALSTRUCTURE=
 DYNAMO_TABLE_NAME_RECENTGLOBALCOMMENT=
 DYNAMO_TABLE_NAME_RECENTDOMAINCOMMENT=
+DYNAMO_TABLE_NAME_COMMENTLOG=
